# Venturecxx

./: .coverage  .coveragerc  .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  Dockerfile  HACKING.md  INTERNALS  MANIFEST.in  Makefile  README.md  README_OSX.md  VERSION  all-crashes  all-inference-quality  all.cfg  bar.py  base.cfg  build_container.py  check.sh  cluster_crp_mixture.html  cmvn_crp_mixture.html  common-scripts.js  conf.py  core-dev-style-guide.md  crashes-base.cfg  crashes.cfg  crp_dist_test.py  global_install.sh  gp_fitting.js  gp_server.py  graph_curve_fitting.html  hello_venture.html  implementation-plan-notes.txt  index.rst  inference-quality.cfg  inference.rst  install_osx_homebrew.sh  (+37 more)
backend/cxx/: .gitignore  CMakeLists.txt  README.md  __init__.py  engine.py  generate_schematics.sh  mceval.scm  nssivm.py  nstests.py  parse.py  render_example.py  sivm.py  test_simulator.py  tests.py  trace.py  valgrind-python.supp  veval.py  wstests.py
backend/cxx/graphs/: detach_tutorial.py  schematics.tex
backend/cxx/graphs/aaa/: dot0.dot  dot1.dot  dot15.dot  dot18.dot  dot19.dot  dot2.dot  dot4.dot  dot5.dot  dot6.dot  dot9.dot
backend/cxx/graphs/aaa_basic_no_aaa/: dot0.dot  dot1.dot  dot2.dot  dot5.dot  dot7.dot
backend/cxx/graphs/aaa_basic_with_aaa/: dot0.dot  dot1.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot
backend/cxx/graphs/aaa_challenge_no_aaa/: dot0.dot  dot1.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot
backend/cxx/graphs/aaa_challenge_with_aaa/: dot0.dot  dot1.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot
backend/cxx/graphs/bpymem/: dot0.dot  dot1.dot  dot10.dot  dot11.dot  dot12.dot  dot13.dot  dot15.dot  dot16.dot  dot18.dot  dot3.dot  dot5.dot  dot6.dot  dot7.dot  dot9.dot
backend/cxx/graphs/cpymem/: dot0.dot  dot1.dot  dot10.dot  dot12.dot  dot4.dot  dot6.dot  dot8.dot  dot9.dot
backend/cxx/graphs/erg1/: dot0.dot  dot1.dot  dot11.dot  dot13.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot  dot8.dot
backend/cxx/graphs/erg3/: dot0.dot  dot1.dot  dot11.dot  dot13.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot  dot8.dot
backend/cxx/graphs/ergTOdrg/: dot0.dot  dot1.dot  dot10.dot  dot11.dot  dot13.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot
backend/cxx/graphs/erg_to_drg/: dot0.dot  dot1.dot  dot10.dot  dot11.dot  dot13.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot  dot8.dot  dot9.dot
backend/cxx/graphs/mh/: all.dot  rho.dot  torus.dot  xi.dot
backend/cxx/graphs/partition/: dot0.dot  dot1.dot  dot10.dot  dot11.dot  dot12.dot  dot13.dot  dot14.dot  dot15.dot  dot16.dot  dot17.dot  dot18.dot  dot19.dot  dot2.dot  dot20.dot  dot21.dot  dot22.dot  dot23.dot  dot24.dot  dot25.dot  dot26.dot  dot27.dot  dot28.dot  dot29.dot  dot3.dot  dot30.dot  dot31.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot  dot8.dot  dot9.dot
backend/cxx/graphs/prior/: dot0.dot  dot1.dot  dot12.dot  dot13.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot  dot9.dot
backend/cxx/graphs/pymem/: dot0.dot  dot1.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot
backend/cxx/graphs/regenToEvalToRegen/: dot0.dot  dot1.dot  dot10.dot  dot11.dot  dot12.dot  dot13.dot  dot14.dot  dot15.dot  dot19.dot  dot3.dot  dot8.dot
backend/cxx/graphs/regen_to_eval_to_regen/: dot0.dot  dot1.dot  dot10.dot  dot11.dot  dot12.dot  dot13.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot  dot6.dot  dot7.dot  dot8.dot  dot9.dot
backend/cxx/graphs/sprinkler/: dot0.dot  dot1.dot  dot2.dot
backend/cxx/graphs/superbayesnet/: dot.dot  dot2.dot
backend/cxx/graphs/trickycoin1/: dot0.dot  dot1.dot  dot2.dot
backend/cxx/graphs/trickycoin2/: dot0.dot  dot1.dot
backend/cxx/inc/: address.h  all.h  args.h  builtin.h  check.h  env.h  exp.h  file_utils.h  flush.h  gkernel.h  indexer.h  infer.h  lkernel.h  mixmh.h  mutator.h  node.h  omegadb.h  particle.h  pysp.h  pytrace.h  pyutils.h  regen.h  render.h  scaffold.h  smap.h  sp.h  spaux.h  sprecord.h  srs.h  trace.h  types.h  utils.h  value.h  values.h
backend/cxx/inc/infer/: gibbs.h  gkernel.h  meanfield.h  mh.h  pgibbs.h
backend/cxx/inc/pysps/: square.py
backend/cxx/inc/sps/: bayesnet.h  bool.h  cond.h  continuous.h  count.h  csp.h  discrete.h  envs.h  eval.h  float.h  list.h  makebetabernoulli.h  makedirmult.h  makelazyhmm.h  makesymdirmult.h  makeucsymdirmult.h  map.h  matrix.h  mem.h  (+9 more)
backend/cxx/pdf_graphs/: schematics.aux  schematics.tex  schematics2.tex  test.aux  test.tex  tutorial.tex
backend/cxx/pysps/: square.py
backend/cxx/src/: address.cxx  aekernel.cxx  args.cxx  builtin.cxx  check.cxx  commit.cxx  db.cxx  detach.cxx  env.cxx  exp.cxx  extract.cxx  file_utils.cxx  findsproots.cxx  flush.cxx  gen.cxx  gkernel.cxx  infer.cxx  lkernel.cxx  node.cxx  omegadb.cxx  parse.cxx  particle.cxx  psp.cxx  pysp.cxx  pytrace.cxx  pyutils.cxx  rcs.cxx  regen.cxx  render.cxx  rho.cxx  scaffold.cxx  sp.cxx  spaux.cxx  testEigen.cxx  testMemHash.cxx  trace.cxx  utils.cxx  value.cxx  values.cxx
backend/new_cxx/: CMakeLists.txt  __init__.py  engine.py  gaussian.py  make_darwin.sh  render.py  trace.py  valgrind-python.supp
backend/new_cxx/inc/: args.h  builtin.h  concrete_trace.h  consistency.h  db.h  detach.h  env.h  expressions.h  gkernel.h  indexer.h  lkernel.h  mixmh.h  node.h  particle.h  pmap.h  pmap.hpp  pset.h  pset.hpp  psp.h  pytrace.h  pyutils.h  regen.h  render.h  rng.h  scaffold.h  serialize.h  smap.h  sp.h  sprecord.h  srs.h  stop-and-copy.h  trace.h  trace_address.h  types.h  utils.h  value.h  values.h  wttree.h  wttree.hpp
backend/new_cxx/src/: args.cxx  builtin.cxx  concrete_trace.cxx  consistency.cxx  db.cxx  detach.cxx  env.cxx  expressions.cxx  gkernel.cxx  indexer.cxx  lkernel.cxx  mixmh.cxx  node.cxx  particle.cxx  psp.cxx  pytrace.cxx  pyutils.cxx  regen.cxx  render.cxx  scaffold.cxx  serialize.cxx  sp.cxx  sprecord.cxx  stop_and_copy.cxx  test_pmap.cxx  trace.cxx  trace.h  trace_address.cxx  utils.cxx  value.cxx  values.cxx
src/backend/cxx/: CMakeLists.txt  README.md  trace.py
(+1958 files in other folders)
